--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,9 @@ dependencies {
     //added by CONNOR for extra dependencies
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
